<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.luoke</groupId>
    <artifactId>roco-map-tracker</artifactId>
    <version>1.1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>roco-common</module>
        <module>roco-model</module>
        <module>roco-map</module>
        <module>roco-engine</module>
        <module>roco-macher</module>
        <module>roco-ui</module>
    </modules>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <javafx.version>25</javafx.version>
        <zstd.version>1.5.6-2</zstd.version>
        <jackson.version>2.15.2</jackson.version>
        <jsoup.version>1.21.2</jsoup.version>
        <sl4j.version>2.0.9</sl4j.version>
        <logback.version>1.4.11</logback.version>
        <lombok.version>1.18.44</lombok.version>
        <junit.version>5.9.2</junit.version>
        <graalvm.version>25.0.2</graalvm.version>
        <djl.version>0.36.0</djl.version>
        <atlantafx.version>2.1.0</atlantafx.version>
        <javacv.version>4.13.0-1.5.13</javacv.version>
        <openblas.version>0.3.31-1.5.13</openblas.version>
        <javacpp.version>1.5.13</javacpp.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- Jsoup -->
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${sl4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- JavaCPP / OpenCV -->
            <dependency>
                <groupId>org.bytedeco</groupId>
                <artifactId>javacpp</artifactId>
                <version>${javacpp.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bytedeco</groupId>
                <artifactId>opencv</artifactId>
                <version>${javacv.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bytedeco</groupId>
                <artifactId>opencv</artifactId>
                <version>${javacv.version}</version>
                <classifier>windows-x86_64</classifier>
            </dependency>
            <dependency>
                <groupId>org.bytedeco</groupId>
                <artifactId>openblas</artifactId>
                <version>${openblas.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bytedeco</groupId>
                <artifactId>openblas</artifactId>
                <version>${openblas.version}</version>
                <classifier>windows-x86_64</classifier>
            </dependency>

            <!-- DJL -->
            <dependency>
                <groupId>ai.djl</groupId>
                <artifactId>api</artifactId>
                <version>${djl.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.djl.onnxruntime</groupId>
                <artifactId>onnxruntime-engine</artifactId>
                <version>${djl.version}</version>
                <scope>runtime</scope>
            </dependency>

            <!-- Zstd -->
            <dependency>
                <groupId>com.github.luben</groupId>
                <artifactId>zstd-jni</artifactId>
                <version>${zstd.version}</version>
            </dependency>

            <!-- JavaFX -->
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <!-- AtlantaFX -->
            <dependency>
                <groupId>io.github.mkpaz</groupId>
                <artifactId>atlantafx-base</artifactId>
                <version>${atlantafx.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.luoke</groupId>
                <artifactId>roco-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luoke</groupId>
                <artifactId>roco-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luoke</groupId>
                <artifactId>roco-map</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luoke</groupId>
                <artifactId>roco-macher</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.luoke</groupId>
                <artifactId>roco-engine</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <source>25</source>
                        <target>25</target>
                        <release>25</release>
                        <encoding>UTF-8</encoding>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
